--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -514,7 +514,7 @@
                             </div>
                         </div>
 
-                        <div class="cus_acnt-container">
+                        <div class="cus_acnt-container d-none">
                             <div class="cus_acnt-row">
                                 <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
                                     <div class="cus_acnt__user-grid cus_acnt__user-grid-xs">
