--- a/static/sass/_cus_acnt_page.scss
+++ b/static/sass/_cus_acnt_page.scss
@@ -512,7 +512,8 @@
               #{$selfCusAcnt} {
                 &__user {
                   &-grid {
-                    &__search {
+                    &__search,
+                    form {
                       flex-direction: row;
 
                       &--field {
