--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -405,8 +405,41 @@
                         </div>
 
                         {% if pwstats['type'] == 'time' and totalPlanUserCount > 0 %}
-                            <div class="profile-section profile-section__managed-header">
-                                {% set usersLeft = totalPlanUserCount > 0 ? totalPlanUserCount -1 : totalPlanUserCount %}
+                            <div class="cus_acnt-container">
+                                <div class="cus_acnt-row">
+                                    <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                        <div class="cus_acnt__user-head">
+                                            <div class="cus_acnt__user-head--label">My users</div>
+                                            <div class="cus_acnt__user-head--sub-text">You can add, search and remove users below.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="cus_acnt__user__allotment-container cus_acnt__user__allotment-container-xs d-none">
+                                <div class="cus_acnt-container">
+                                    <div class="cus_acnt-row">
+                                        <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                            {% set usersLeft = totalPlanUserCount > 0 ? totalPlanUserCount -1 : totalPlanUserCount %}
+                                            <div class="cus_acnt__user__addition">
+                                                <aside class="cus_acnt__user__addition-btn">
+                                                    <a id="addManagedUser" href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered">Add user</a>
+                                                </aside>
+                                                <aside class="cus_acnt__user__allot-wrap">
+                                                    <span class="cus_acnt__user__allot-wrap--image">
+                                                        <img src="{{networkData.templatePath}}/static/icons/user_icon.png"" alt="user" class="img-fluid" />
+                                                    </span>
+                                                    <span class="cus_acnt__user__allot-wrap--text">Allocated users:</span>
+                                                    <span class="cus_acnt__user__allot-wrap--text strong">{{managedUserCount}} of {{totalPlanUserCount}}</span>
+                                                </aside>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="profile-section profile-section__managed-header d-none">
+                                
                                 <p class="profile-section__heading">My Users <span class="profile-section__users-left">{{managedUserCount}} of {{totalPlanUserCount}} used.</span></p>
                                 <a id="addManagedUser" style="z-index:1000;" class="text-button text-button--italic u-float-right{% if managedUserCount + 1 >= totalPlanUserCount %} hidden{% endif %}">+ Add users</a>
                             </div>
@@ -482,37 +515,6 @@
                             </div>
                         </div>
                     {% endif %}
-
-                        <div class="cus_acnt-container d-none">
-                            <div class="cus_acnt-row">
-                                <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
-                                    <div class="cus_acnt__user-head">
-                                        <div class="cus_acnt__user-head--label">My users</div>
-                                        <div class="cus_acnt__user-head--sub-text">You can add, search and remove users below.</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cus_acnt__user__allotment-container cus_acnt__user__allotment-container-xs d-none">
-                            <div class="cus_acnt-container">
-                                <div class="cus_acnt-row">
-                                    <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
-                                        <div class="cus_acnt__user__addition">
-                                            <aside class="cus_acnt__user__addition-btn">
-                                                <a href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered">Add user</a>
-                                            </aside>
-                                            <aside class="cus_acnt__user__allot-wrap">
-                                                <span class="cus_acnt__user__allot-wrap--image">
-                                                    <img src="{{networkData.templatePath}}/static/icons/user_icon.png"" alt="user" class="img-fluid" />
-                                                </span>
-                                                <span class="cus_acnt__user__allot-wrap--text">Allocated users:</span>
-                                                <span class="cus_acnt__user__allot-wrap--text strong">{{managedUserCount}} of {{totalPlanUserCount}}</span>
-                                            </aside>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                         <div class="cus_acnt-container d-none">
                             <div class="cus_acnt-row">
