--- a/static/sass/_cus_acnt_page.scss
+++ b/static/sass/_cus_acnt_page.scss
@@ -514,6 +514,7 @@
                   &-grid {
                     &__search,
                     form {
+                      flex: 1;
                       flex-direction: row;
 
                       &--field {
