--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -461,64 +461,36 @@
                                                     </form>
                                                 </div>
                                             {% endif %}
-
+                                            
+                                            <div class="cus_acnt__user-grid__show-user">
+                                                {% set userLength = user | length  %}
+                                                {% set resultString = userLength < 2 ? 'user' : 'users' %}
+                                                Showing {{userLength}} {{resultString}}
+                                            </div>
 
                                              <ul id="mangedUsers" class="managed-users">
-                                                {% if managedUserCount == 0 %} 
-                                                    <div id="nousers" class="empty-listing">
-                                                        <p>You have no current users.</p>
-                                                    </div>
+                                                {% if managedUserCount == 0 %}
+                                                    <li id="nousers" class="no-data">No users found</li>
                                                 {% else %}
                                                 
                                                     {% for user in managedUsers %}
-
-                                                        <li id="{{user.id}}" class="userdetails">
-                                                            <div class="u-float-left">
-                                                                <p class="userdetails__name">
-                                                                    <span class="j-firstname">{{user.firstname}}</span> 
-                                                                    <span class="j-lastname">{{user.lastname}}</span>
-                                                                </p> 
-                                                                {# <p class="j-username userdetails__username">{{user.username}}</p> #}
-                                                            </div>
-                                                            <a class="j-delete userdetails__button userdetails__button--delete u-float-right"></a>
-                                                            <a class="j-edit userdetails__button userdetails__button--edit u-float-right"></a>
-                                                            <p class="j-email userdetails__email u-float-right">{{user.email}}</p>
+                                                    
+                                                        <li id="{{user.id}}" class="user-list--items">
+                                                            <aside>
+                                                                <div class="user-list--items-name">{{user.firstname}} {{user.lastname}}</div>
+                                                                <div class="user-list--items-email">{{user.email}}</div>
+                                                            </aside>
+                                                            <aside>
+                                                                <a href="javascript:;" class="user-list--items-remove j-delete userdetails__button">
+                                                                    <span class="icon fa fa-trash"></span>
+                                                                    <span>Remove</span>
+                                                                </a>
+                                                            </aside>
                                                         </li>
                                                     {% endfor %}
 
                                                 {% endif %}
 
-                                            </ul>
-
-                                            <div class="cus_acnt__user-grid__show-user">
-                                                Showing 0 users
-                                            </div>
-                                            <ul class="cus_acnt__user-grid__list">
-                                                <li class="no-data">No users found</li>
-                                                <li class="user-list--items">
-                                                    <aside>
-                                                        <div class="user-list--items-name">Tom Jones</div>
-                                                        <div class="user-list--items-email">cheal@pagemasters.com.au</div>
-                                                    </aside>
-                                                    <aside>
-                                                        <a href="javascript:;" class="user-list--items-remove">
-                                                            <span class="icon fa fa-trash"></span>
-                                                            <span>Remove</span>
-                                                        </a>
-                                                    </aside>
-                                                </li>
-                                                <li class="user-list--items">
-                                                    <aside>
-                                                        <div class="user-list--items-name">Tom Jones</div>
-                                                        <div class="user-list--items-email">cheal@pagemasters.com.au</div>
-                                                    </aside>
-                                                    <aside>
-                                                        <a href="javascript:;" class="user-list--items-remove">
-                                                            <span class="icon fa fa-trash"></span>
-                                                            <span>Remove</span>
-                                                        </a>
-                                                    </aside>
-                                                </li>
                                             </ul>
                                         </div>
                                     </div>
